add project data and personal information to portfolio

--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="./index.js" defer></script>
+    <script src="./data.js"></script>
     <title>Portfolio</title>
 </head>
 <body>
     <header>
         <div>
             <h1>Ricky's projects!</h1>
-            <p>here are some projects I been doing</p>
-            <a href="https://github.com/RickyBv1" target="_blank">Check my GitHub profile</a>
+            <p>Here are some projects I been doing</p>
+            <a href="https://github.com/RickyBv1" target="_blank">Check out my GitHub profile</a>
         </div>
         <img src="./img/Ricky.jpg">
     </header>
     <main>
         <section>
-            <h2></h2>
+            <h2>My projects</h2>
             <div id="cards-container"></div>
         </section>
     </main>
