add new icons, update project descriptions, and enhance HTML structure for portfolio

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="./index.js" defer></script>
@@ -11,22 +12,20 @@
 <body>
     <header>
         <div>
-            <h1>Ricky's projects!</h1>
+            <h1>Ricardo Cortés</h1>
             <p>Here are some projects I been doing</p>
-            <a href="https://github.com/RickyBv1" target="_blank">Check out my GitHub profile</a>
         </div>
         <img src="./img/Ricky.jpg">
     </header>
     <main>
         <section>
             <h2>My projects</h2>
-            <div id="cards-container"></div>
+            <div id="projects-container"></div>
         </section>
     </main>
-    <aside></aside>
+    <aside class="card"></aside>
     <footer>
         <p>Made by Ricky</p>
-        <p><a href="">My social media</a></p>
     </footer>
 </body>
 </html>
