--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Ricardo Cortés</h1>
             <p>Here are some projects I been doing</p>
         </div>
-        <img src="./img/Ricky.jpg">
+        <img src="/img/Ricky.jpg">
     </header>
     <main>
         <section>
